--- a/popup.html
+++ b/popup.html
@@ -3,16 +3,21 @@
 
 <head>
   <style>
-    button {
-      height: 30px;
-      width: 30px;
-      outline: none;
+    .input-group input {
+      display: inline;
     }
   </style>
 </head>
 
 <body>
-  <button id="changeColor"></button>
+  <div class="input-group">
+    <input type="checkbox" id="toggle" checked>
+    <label for="toggle">Active</label>
+  </div>
+  <div>
+    <input type="text" id="to">
+    <button id="save">Change Replacement Text</button>
+  </div>
   <script src="popup.js"></script>
 </body>
 
